# linkedin-mcp

./: .dockerignore  .gitignore  .mcpbignore  CLAUDE.md  Dockerfile  Makefile  README.md  install.sh  linkedin_job_4153684130.html  linkedin_jobs.txt  linkedin_test_4051266841.txt  linkedin_test_4153684130.txt  manifest.json  pyproject.toml  requirements.txt
.ai-state/: IDEA_LEDGER_2026-02-13_23-17-00.md
.claude/: settings.local.json
.claude-plugin/: mcp-local.json  plugin.json
config/: claude.json
skills/cv-tailoring/: SKILL.md
skills/cv-tailoring/references/: methodology.md
skills/linkedin-job-search/: SKILL.md
skills/linkedin-job-search/references/: tool-mapping.md
src/linkedin_mcp_server/: __init__.py  background_scraper.py  cache.py  db.py  main.py  migrate_cache.py  models.py  scraper.py  utils.py  web_scrapper.py
src/linkedin_mcp_server/prompts/: tailor_cv.yaml
tests/: test_background_scraper.py  test_cache.py  test_db.py  test_integration.py  test_migrate_cache.py  test_models.py  test_scraper.py
